// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:lib/Command > #addArgument > should throw if argument is added after variadic argument 1`] = `
{
  "code": 1,
  "id": "kronk/argument-after-variadic",
  "message": "Cannot have argument after variadic argument ([num...])",
  "additional": [],
  "cause": {
    "argument": "<...>",
    "last": "[num...]",
  },
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` alias conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'tz' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` name conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'timezone' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addCommand > should throw on invalid \`command\` name 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-subcommand-name",
  "message": "Invalid subcommand name",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addOption > should throw on long flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '--max' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addOption > should throw on short flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '-M' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (0) 1`] = `
Command {
  "info": {
    "description": "show help",
    "name": "help",
    "helpCommand": null,
    "hidden": false,
    "arguments": [],
    "helpOption": Option {
      "info": {
        "description": "show help",
        "flags": "-h | --help",
        "hidden": false,
        "choices": undefined,
        "default": undefined,
        "parser": undefined,
        "short": "-h",
        "long": "--help",
        "conflicts": undefined,
        "env": undefined,
        "implies": {},
        "preset": undefined,
      },
    },
    "options": Map {
      "--help" => Option {
        "info": {
          "description": "show help",
          "flags": "-h | --help",
          "hidden": false,
          "choices": undefined,
          "default": undefined,
          "parser": undefined,
          "short": "-h",
          "long": "--help",
          "conflicts": undefined,
          "env": undefined,
          "implies": {},
          "preset": undefined,
        },
      },
      "-h" => Option {
        "info": {
          "description": "show help",
          "flags": "-h | --help",
          "hidden": false,
          "choices": undefined,
          "default": undefined,
          "parser": undefined,
          "short": "-h",
          "long": "--help",
          "conflicts": undefined,
          "env": undefined,
          "implies": {},
          "preset": undefined,
        },
      },
    },
    "subcommands": Map {},
    "version": undefined,
    "action": undefined,
    "aliases": Set {},
    "done": undefined,
    "exit": undefined,
    "optionPriority": "local",
    "summary": undefined,
    "unknown": false,
    "usage": undefined,
  },
  "actionEvent": null,
  "args": [],
  "argv": [],
  "defaultCommand": null,
  "events": EventEmitter {
    "_events": {
      "option:help": [
        [Function bound onOption],
        [Function bound onOptionWithAction],
        [Function bound onOptionHelp],
      ],
    },
    "_newListener": false,
    "_removeListener": false,
    "verboseMemoryLeak": false,
    "_conf": {
      "delimiter": ":",
    },
    "delimiter": ":",
  },
  "optionValueSources": {},
  "optionValues": {},
  "parent": Command {
    "info": {
      "name": undefined,
      "description": undefined,
      "hidden": false,
      "arguments": [],
      "helpCommand": [Circular],
      "helpOption": Option {
        "info": {
          "description": "show help",
          "flags": "-h | --help",
          "hidden": false,
          "choices": undefined,
          "default": undefined,
          "parser": undefined,
          "short": "-h",
          "long": "--help",
          "conflicts": undefined,
          "env": undefined,
          "implies": {},
          "preset": undefined,
        },
      },
      "options": Map {
        "--help" => Option {
          "info": {
            "description": "show help",
            "flags": "-h | --help",
            "hidden": false,
            "choices": undefined,
            "default": undefined,
            "parser": undefined,
            "short": "-h",
            "long": "--help",
            "conflicts": undefined,
            "env": undefined,
            "implies": {},
            "preset": undefined,
          },
        },
        "-h" => Option {
          "info": {
            "description": "show help",
            "flags": "-h | --help",
            "hidden": false,
            "choices": undefined,
            "default": undefined,
            "parser": undefined,
            "short": "-h",
            "long": "--help",
            "conflicts": undefined,
            "env": undefined,
            "implies": {},
            "preset": undefined,
          },
        },
      },
      "subcommands": Map {
        "help" => [Circular],
      },
      "version": undefined,
      "action": undefined,
      "aliases": Set {},
      "done": undefined,
      "exit": undefined,
      "optionPriority": "local",
      "summary": undefined,
      "unknown": false,
      "usage": undefined,
    },
    "actionEvent": null,
    "args": [],
    "argv": [],
    "defaultCommand": null,
    "events": EventEmitter {
      "_events": {
        "option:help": [
          [Function bound onOption],
          [Function bound onOptionWithAction],
          [Function bound onOptionHelp],
        ],
      },
      "_newListener": false,
      "_removeListener": false,
      "verboseMemoryLeak": false,
      "_conf": {
        "delimiter": ":",
      },
      "delimiter": ":",
    },
    "optionValueSources": {},
    "optionValues": {},
    "parent": null,
  },
}
`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (1) 1`] = `null`;

exports[`unit:lib/Command > #helpOption > should return help option (0) 1`] = `
Option {
  "info": {
    "description": "show help",
    "flags": "-h | --help",
    "hidden": false,
    "choices": undefined,
    "default": undefined,
    "parser": undefined,
    "short": "-h",
    "long": "--help",
    "conflicts": undefined,
    "env": undefined,
    "implies": {},
    "preset": undefined,
  },
}
`;

exports[`unit:lib/Command > #helpOption > should return help option (1) 1`] = `null`;

exports[`unit:lib/Command > #usage > should return command usage (0) 1`] = `
{
  "arguments": undefined,
  "options": "[options]",
  "subcommand": "[command]",
}
`;

exports[`unit:lib/Command > #usage > should return command usage (1) 1`] = `
{
  "arguments": "<x> <y> <z>",
  "options": "[options]",
  "subcommand": "[command]",
}
`;
